# set_eq

./: Cargo.toml  LICENSE-MIT  README.md  build.rs  default.nix  derivation.nix  overlay.nix  release.nix  spec.json  spec.nix
res/: default-pa-effects-preset.json
src/: cli.rs  main.rs  pa_effects.rs  pa_eq.rs  utils.rs
src/dbus_api/: server_lookup.rs
src/pa_eq/: mod.rs
src/pa_eq/dbus_api/: equalizing_manager.rs  mod.rs  server_lookup.rs  sink.rs
src/parsing/: .gitignore  equalizer_apo.lalrpop  equalizer_apo.rs  mod.rs
