[package]
name = "set_eq"
version = "0.1.0"
authors = ["Minijackson <minijackson@riseup.net>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/minijackson/set_eq"
description = "A command-line tool to manipulate PulseAudio's equalizers"
edition = "2018"

[features]
default = ["pa-eq", "pa-effects"]

pa-eq = ["dbus"]
pa-effects = ["serde_json"]

[build-dependencies]
lalrpop = "0.16"
clap = "2.32.0"
clap-verbosity-flag = "0.2"
clap-log-flag = "0.2"
structopt = "0.2"

[dependencies]
#clap = { git = "https://github.com/kbknapp/clap-rs", branch = "v3-master" }
clap = "2.32.0"
clap-verbosity-flag = "0.2"
clap-log-flag = "0.2"
structopt = "0.2"

log = "0.4.4"
failure = "0.1.2"

lalrpop-util = "0.16"
regex = "1.0.4"

dbus = { version = "0.6.2", optional = true }

serde_json = { version = "1.0.32", optional = true }
